fixed login header alignment (#602)
* fixed login header alignment

* updated login header css

--- a/micro-ui/web/micro-ui-internals/packages/css/src/pages/employee/login.scss
+++ b/micro-ui/web/micro-ui-internals/packages/css/src/pages/employee/login.scss
@@ -245,6 +245,12 @@
       text-align: center;
       margin-top: 10px;
     }
+
+    header.digit-header-content {
+      &:not(.label){
+        text-align: center;
+      }
+    }
   }
 
   .buttonClassName {
